--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA 12.1.4 for binding GitHub repository
+Just another small Minesweeper clone I wrote some time ago.
